--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nona.css",
-  "version": "0.1.0",
-  "description": "CSS Framework With Simplicity In Mind",
+  "version": "0.3.0",
+  "description": "Nona - Simplified CSS Framework",
   "repository": "https://github.com/AlterRegalia/nona.git",
   "author": "AlterRegalia <ariiq.dio.f@gmail.com>",
   "license": "MIT",
